# lite-xl-system-fonts

./: .gitignore  LICENSE  README.md  dyn_fontconfig.h  lite_xl_plugin_api.h  meson.build  meson_options.txt  systemfonts.c  systemfonts.lua
.github/workflows/: build.yaml
subprojects/: expat.wrap  freetype2.wrap
